# Ralix

./: 404.html  Cargo.toml  README.md  index.html  print.html  searcher-c2a407aa.js  searchindex-3a02f8d0.js  searchindex-959f3fc3.js  searchindex-b898fed7.js  searchindex-cfb025c1.js  toc-54f10d66.js  toc.html
.github/workflows/: docs.yaml  tests.yaml
cli/: ast.html  meow.html  repl.html  run.html
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/cli/: ast.md  meow.md  repl.md  run.md
docs/src/guide/: creating.md  installation.md  reading.md
docs/src/misc/: contributors.md
docs/src/syntax/: README.md
examples/: constants.ralix  expressions_out.json  function_generics.ralix  function_generics_out.json  functions.ralix  functions_out.json  package.ralix  pointers_and_shareables.ralix  pointers_and_shareables_out.json  recursive_functions.ralix  recursive_functions_out.ralix
examples/submodules/: package.ralix  utils.ralix
guide/: installation.html
misc/: contributors.html
src/: interpreter.rs  lib.rs  logger.rs  main.rs
src/ast/: expressions.rs  impls.rs  mod.rs  statements.rs  types.rs
src/cli/: mod.rs  repl.rs
src/cli/commands/: ast.rs  init.rs  kitty.txt  meow.rs  mod.rs  run.rs  (+1 more)
src/eval/: context.rs  error.rs  impls.rs  mod.rs  module_cache.rs
src/lexer/: mod.rs  token.rs
src/object/: environment.rs  heap.rs  mod.rs  module.rs
src/parser/: error.rs  mod.rs
src/symbol_table/: mod.rs
src/type_checker/: error.rs  mod.rs  module_cache.rs
syntax/: index.html
syntax/expressions/: index.html
syntax/statements/: index.html
(+87 files in other folders)
