[package]
name = "ralix"
version = "0.1.0"
edition = "2024"
description = "A simple, type-safe, tree walking interpreter"
license = "MIT"
documentation = "https://devRals.github.io/Ralix"
homepage = "https://devRals.github.io/Ralix"
license-file = "LICENSE"
keywords = ["interpreter"]
repository = "https://https://github.com/devRals/Ralix"
authors = ["devRals"]


[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
